[package]
name = "ruist"
version = "0.1.0"
authors = ["Tomas Zemanovic <tzemanvic@gmail.com>"]

[lib]
name = "ruist"

[dependencies]
gfx = "0.13.0"
#glutin ="*"
#gfx_window_glutin = "*"
piston2d-graphics = "0.19.0"
piston2d-gfx_graphics = "0.35.0"
pistoncore-glutin_window = "0.33.0"
piston = "0.27.0"
find_folder = "0.3.0"
gfx_device_gl = "0.12.0"